// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallToAction should match a snapshot 1`] = `
<div
  className=""
  data-test=""
>
  <ModalHeader
    title="My title"
  />
  <ModalBody
    body={
      <React.Fragment>
        <p />
        <div
          className="has-text-right"
        >
          <Button
            dataTest=""
            type="button"
            variant="primary"
          >
            My button
          </Button>
        </div>
      </React.Fragment>
    }
  />
</div>
`;

exports[`CallToAction should match snapshot with footerItems 1`] = `
<div
  className=""
  data-test=""
>
  <ModalHeader
    title="Test"
  />
  <ModalBody
    body={
      <React.Fragment>
        <p />
        <div
          className="has-text-right"
        >
          <React.Fragment>
            <Button
              onClick={[MockFunction]}
              type="button"
              variant="primary"
            >
              My Apps
            </Button>
            <Button
              onClick={[MockFunction]}
              type="button"
              variant="primary"
            >
              Submit another app
            </Button>
          </React.Fragment>
        </div>
      </React.Fragment>
    }
  />
</div>
`;
